objects/copado__Git_Repository__c.object
<CustomObject>
    <description>Connection to a git repository like github.com or bitbuckets.org</description>
    <fields>
        <fullName>copado__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Git Repository</label>
    <listViews>
        <fullName>copado__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Git Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>